# Todoist-CLI

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
docs/: release.md  shell-completion.md
examples/: add-tasks-from-lines.sh  list-today-json.sh
src/todoist_cli/: __init__.py  __main__.py  app.py  auth.py  client.py  config.py  errors.py  output.py
src/todoist_cli/commands/: __init__.py  _utils.py  auth.py  comments.py  labels.py  projects.py  raw.py  sections.py  sync.py  tasks.py
tests/: test_app.py  test_auth.py  test_auth_commands.py  test_client.py  test_comments.py  test_labels.py  test_projects.py  test_raw.py  test_sections.py  test_sync.py  test_tasks.py
