[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "todoist-cli"
version = "0.1.0"
description = "A command-line interface for Todoist API operations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Todoist CLI contributors" },
]
dependencies = [
  "httpx>=0.27.0",
  "platformdirs>=4.2.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
]

[project.scripts]
todoist = "todoist_cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/todoist_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
